[gd_scene load_steps=2 format=2]

[ext_resource path="res://Actors/Actions/AttackAction.gd" type="Script" id=1]

[node name="AttackAction" type="Node"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_tween_completed"]
